--- a/Visual Studio 2013/Projects/Practice/Practice/Practice.vcxproj
+++ b/Visual Studio 2013/Projects/Practice/Practice/Practice.vcxproj
@@ -81,7 +81,7 @@
     <Text Include="input.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="temp.cpp" />
+    <ClCompile Include="temp.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
