--- a/Visual Studio 2013/Projects/Algorithm/Graph/Graph.vcxproj
+++ b/Visual Studio 2013/Projects/Algorithm/Graph/Graph.vcxproj
@@ -78,7 +78,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="GraphSearch.cpp" />
+    <ClCompile Include="KruskalsAlgorithm.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
