--- a/Visual Studio 2013/Projects/Algorithm/DynamicProgramming/DynamicProgramming.vcxproj
+++ b/Visual Studio 2013/Projects/Algorithm/DynamicProgramming/DynamicProgramming.vcxproj
@@ -78,7 +78,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="LCS.c" />
+    <Text Include="output.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="BinomialCoefficient.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
